<resources>
    <string name="app_name">Smart Parts Picker</string>
    <string name="title_home">Главная</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_assemblies">Сборки</string>
    <string name="title_more">Еще</string>
    <string name="accept_location">Подтвердите местоположение</string>
    <string name="choose_city">Укажите ваш город</string>
    <string name="accept">Подтвердить</string>
    <string name="more">Еще</string>
    <string name="search">Поиск</string>
    <string name="rating_format">(%1$s)</string>
    <string name="preview_indicator">Preview Indicator</string>
    <string name="error">An error occurred</string>
    <string name="categories">Категории</string>
    <string name="filter">Фильтр</string>
    <string name="your_assemblies">Ваши сборки</string>
    <string name="assembly_description">Количество в сборке: %1$d</string>
    <string name="create_new_assembly">Создать новую сборку</string>
    <string name="preview">Preview</string>
    <string name="min_price">от %1$s %2$s</string>
    <string name="price">%1$s р.</string>
    <string name="variants">%1$d вариантов</string>
    <string name="value">Value</string>
    <string name="all_games">Смотреть все игры</string>
    <string name="games_select_title">Подберите комплектующие\nпод требования игры!</string>
    <string name="cpu">Процессор</string>
    <string name="apply_filter">Показать результаты</string>
    <string name="description">Описание</string>
    <string name="article_id">Код товара: %1$d</string>
    <string name="shops_offers">Предложения продавцов</string>
    <string name="specifications_label">Основные</string>
    <string name="your_city">Ваш город:</string>
    <string name="motherboard">Материнская плата</string>
    <string name="ram">Оперативная память</string>
    <string name="storage">Носители информации</string>
    <string name="gpu">Видеокарта</string>
    <string name="power_supply">Блок питания</string>
    <string name="casing">Корпус</string>
    <string name="buy">Купить сейчас</string>
    <string name="change_city">Сменить регион</string>
    <string name="show_all">Показать все %1$d</string>
    <string name="hide_all">Скрыть</string>
    <string name="min_value">Минимальное значение %1$f</string>
    <string name="max_value">Максимальное значение %1$f</string>
    <string name="enter_budget">Введите бюджет</string>
    <string name="budget_description">Введите ваш бюджет и нажмите «Поиск»</string>
    <string name="budget_title">Подберем комплектующие под\nваш бюджет</string>
    <string name="create_assembly">Создать сборку</string>
    <string name="enter_name">Введите название</string>
    <string name="add_to_assembly">Добавить в сборку</string>
    <string name="enter_positive_number">Введите положительное число</string>
    <string name="budget_selected">Вот что мы подобрали</string>
    <string name="average_cost">Средняя стоимость:</string>
    <string name="budget_error">Введите значение больше 0</string>
    <string name="free_delivery">Бесплатно</string>
    <string name="v">v%1$s</string>
    <string name="save_assembly">Сохранить сборку</string>
    <string name="saved">Сохранено</string>
    <string name="error_no_internet">Отсутствует подключение к интернету</string>
</resources>