<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/cover"
    app:cardCornerRadius="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:minWidth="@dimen/popup_width"
        android:orientation="vertical"
        android:padding="@dimen/margin_extra">

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:constraint_referenced_ids="ivLogo,tvTitle,tvDescription,spacer,tiValue,btnSearch"
            app:flow_verticalGap="@dimen/margin_mid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/splash_logo_size"
            android:layout_height="@dimen/splash_logo_size"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_logo_budget" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_semibold"
            android:gravity="center"
            android:text="@string/budget_title"
            android:textColor="@color/secondary_white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_regular"
            android:gravity="center"
            android:text="@string/budget_description"
            android:textColor="@color/secondary_white"
            android:textSize="14sp" />

        <Space
            android:id="@+id/spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:layout_editor_absoluteY="277dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiValue"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_budget"
            android:minWidth="280dp"
            android:textColorHint="#9F9F9F"
            app:boxBackgroundColor="@color/popup"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius"
            app:boxCornerRadiusTopStart="@dimen/corner_radius"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_close"
            app:endIconMode="clear_text"
            app:endIconScaleType="centerInside"
            app:endIconTint="@color/white"
            app:hintTextAppearance="@style/CustomHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_regular"
                android:inputType="number"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:enabled="false"
            android:fontFamily="@font/urbanist_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="@dimen/corner_radius" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>