<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.catalog.filter.FilterFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/margin_big">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_big"
                android:fontFamily="@font/urbanist_black"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFilters"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_big"
                android:layout_marginBottom="@dimen/margin_big" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpiLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ellipsize="end"
        android:fontFamily="@font/urbanist_semibold"
        android:maxLines="2"
        android:text="@string/error"
        android:textColor="@color/secondary_white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnApplyFilter"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/margin_big"
        android:fontFamily="@font/urbanist_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/apply_filter"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="@dimen/corner_radius" />

</FrameLayout>