<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.assemblies.AssembliesFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/margin_big">

            <SearchView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/search_box_height"
                android:layout_marginTop="@dimen/margin_big"
                android:background="@drawable/sh_search_bg"
                android:fontFamily="@font/urbanist_black"
                android:iconifiedByDefault="false"
                android:maxWidth="@dimen/search_box_width"
                android:queryBackground="@null"
                android:queryHint="@string/search"
                android:searchHintIcon="@null"
                android:searchIcon="@drawable/ic_search"
                android:textColorHint="#A8A6B9"
                app:boxCollapsedPaddingTop="0dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:fontFamily="@font/urbanist_black"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:fontFamily="@font/urbanist_black"
                android:text="@string/your_assemblies"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/search"
                app:layout_constraintTop_toBottomOf="@+id/search" />

            <TextView
                android:id="@+id/tvCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_counter_bg"
                android:fontFamily="@font/urbanist_regular"
                android:paddingHorizontal="12dp"
                android:paddingVertical="5dp"
                android:textColor="#9C9CA3"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
                app:layout_constraintEnd_toEndOf="@+id/search"
                app:layout_constraintTop_toTopOf="@+id/tvTitle"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAssemblies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <Button
                android:id="@+id/btnNewAssembly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_big"
                android:fontFamily="@font/urbanist_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="42dp"
                android:paddingVertical="10dp"
                android:text="@string/create_new_assembly"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:cornerRadius="@dimen/corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvAssemblies"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_big"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnNewAssembly" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpiLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ellipsize="end"
        android:fontFamily="@font/urbanist_semibold"
        android:maxLines="2"
        android:text="@string/error"
        android:textColor="@color/secondary_white"
        android:textSize="16sp"
        android:visibility="gone"
        tools:visibility="visible" />
</FrameLayout>

